# flatfish

./: README.md
auv_control_msgs/: CMakeLists.txt  package.xml  readme.md
auv_control_msgs/msg/: JointCommandStamped.msg
driver_canbus/: CMakeLists.txt  README.md  package.xml
driver_canbus/include/backwards/: canbus.hh  canmessage.hh
driver_canbus/include/drivers_canbus/: Driver.hpp  Driver2Web.hpp  DriverEasySYNC.hpp  DriverHico.hpp  DriverHicoPCI.hpp  DriverNetGateway.hpp  DriverSocket.hpp  DriverVsCan.hpp  Message.hpp
driver_canbus/src/: Driver.cpp  Driver2Web.cpp  DriverEasySYNC.cpp  DriverHico.cpp  DriverHicoPCI.cpp  DriverNetGateway.cpp  DriverSocket.cpp  DriverVsCan.cpp
driver_canbus/src/tools/: MainEasySYNC.cpp  MainMonitor.cpp  MainReset.cpp  MainSend.cpp  hcantool.c
driver_canbus/test/: test_DriverEasySYNC.cpp  test_Helpers.hpp  test_Message.cpp
flatfish_msgs/: CMakeLists.txt  package.xml
flatfish_msgs/msg/: Buffer.msg  Dataset.msg  EvaluationMetrics.msg  KerasReadyTrainingData.msg  ModelWeights.msg  ThrusterSpeeds.msg  ThrusterStatus.msg  TrainingData.msg
launch/: training_launch.py
log/: latest_build
mystery/: README.md  experiments.md  notes.md  package.xml  setup.cfg  setup.py
mystery/launch/: training_launch.py
mystery/mystery/: differentiator.py  evaluator.py  inference.py  inferencer.py  odometry_publisher.py  plotting.py  receive.py  receive_odom.py  receiver.py  test_model.py  thruster_status_publisher.py  trainer.py  training.py  twist_publisher.py
mystery/scripts/: model.py  uq_model.py
mystery/test/: test_model.py
mystery/visualization/: rosbag2_long_gathered.csv  visualize.py
perplexity/: package.xml  setup.cfg  setup.py
perplexity/launch/: evaluation_metrics-normal-50-bad-overfit.csv  evaluation_metrics-normal.csv  evaluation_metrics-priority.csv  evaluation_metrics-uncertainty.csv  gathered_long_mission.csv  gathered_long_mission2.csv  training_launch.py  visualize.py
perplexity/perplexity/: bufferer.py  differentiator.py  evaluator.py  inferencer.py  receiver.py  trainer.py
perplexity/scripts/: buffer.py  uq_model.py
re-recorded_rosbags/: long_mission2_build_test.csv  long_mission2_filtered.csv  long_mission2_no_smoothin.csv  long_mission2_smooth30-used as test set.csv  offline_baseline.py  offline_baseline_time_series.py  rosbag_api.py  uq_model.py  uq_model_time_series.py  visualize_data_set.py
re-recorded_rosbags/csv_data_for_test_set/: long_mission2_10_20.csv  long_mission2_15_15.csv  long_mission2_20_10.csv  long_mission_for_test_set_diff_15.csv
re-recorded_rosbags/long_mission2_build_test/: long_mission2_build_test_0.db3  metadata.yaml
re-recorded_rosbags/long_mission2_filtered/: long_mission2_filtered_0.db3  metadata.yaml
re-recorded_rosbags/long_mission2_no_smoothin/: long_mission2_no_smoothin_0.db3  metadata.yaml
re-recorded_rosbags/long_mission2_smooth30/: long_mission2_smooth30_0.db3  metadata.yaml
re-recorded_rosbags/model_overfit/: ensemble-weights-0.hdf5  ensemble-weights-1.hdf5  ensemble-weights-2.hdf5  ensemble-weights-3.hdf5  ensemble-weights-4.hdf5  ensemble-weights-5.hdf5  ensemble-weights-6.hdf5  ensemble-weights-7.hdf5  ensemble-weights-8.hdf5  ensemble-weights-9.hdf5
re-recorded_rosbags/model_overfit_smooth30/: ensemble-weights-0.hdf5  ensemble-weights-1.hdf5  ensemble-weights-2.hdf5  ensemble-weights-3.hdf5  ensemble-weights-4.hdf5  ensemble-weights-5.hdf5  ensemble-weights-6.hdf5  ensemble-weights-7.hdf5  ensemble-weights-8.hdf5  ensemble-weights-9.hdf5
re-recorded_rosbags/model_overfit_smooth30_switch/: ensemble-weights-0.hdf5  ensemble-weights-1.hdf5  ensemble-weights-2.hdf5  ensemble-weights-3.hdf5  ensemble-weights-4.hdf5  ensemble-weights-5.hdf5  ensemble-weights-6.hdf5  ensemble-weights-7.hdf5  ensemble-weights-8.hdf5  ensemble-weights-9.hdf5
re-recorded_rosbags/model_overfit_smooth30_switch_bigger_batch_size/: ensemble-weights-0.hdf5  ensemble-weights-1.hdf5  ensemble-weights-2.hdf5  ensemble-weights-3.hdf5  ensemble-weights-4.hdf5  ensemble-weights-5.hdf5  (+4 more)
ros2_canbus/: CMakeLists.txt  README.md  issues.md  package.xml
ros2_canbus/config/: example.yaml
ros2_canbus/include/ros2_canbus/: ros_utils.hpp
ros2_canbus/launch/: ros2_canbus.launch.py
ros2_canbus/msg/: ArrayCanbusMessage.msg  CanbusMessage.msg  CanbusStatistics.msg
ros2_canbus/ros2_canbus/: Ros2Canbus.hpp  conversions.hpp
ros2_canbus/src/: Ros2Canbus.cpp  ros2_canbus_node.cpp
ros2_canbus/srv/: GetTopicName.srv  IsWatched.srv  Unwatch.srv  Watch.srv
ros2_driver_base/: CMakeLists.txt  README.md  package.xml
ros2_driver_base/include/ros2_driver_base/: bus.hpp  driver.hpp  exceptions.hpp  fixture.hpp  fixture_boost_test.hpp  fixture_gtest.hpp  io_listener.hpp  io_stream.hpp  status.hpp  tcp_driver.hpp  test_stream.hpp  timeout.hpp
ros2_driver_base/src/: bus.cpp  driver.cpp  exceptions.cpp  io_listener.cpp  io_stream.cpp  tcp_driver.cpp  test_stream.cpp  timeout.cpp
ros2_driver_base/test/: test_driver.cpp  test_tcp_read.cpp  test_tcp_write.cpp  test_test_stream.cpp  test_test_stream_gtest.cpp  test_udp_read.cpp  test_udp_write.cpp
ros2_thruster_enitech/: CMakeLists.txt  package.xml
ros2_thruster_enitech/config/: thruster_enitech_node.yaml
ros2_thruster_enitech/include/thruster_enitech/: Emergency.hpp  NMT.hpp  Protocol.hpp  Request.hpp  SDO.hpp  Status.hpp  ThrusterEnitechNode.hpp
ros2_thruster_enitech/launch/: thruster_enitech.launch.py
ros2_thruster_enitech/msg/: ThrusterStatus.msg
ros2_thruster_enitech/src/: NMT.cpp  Protocol.cpp  SDO.cpp  ThrusterEnitechNode.cpp
rosbag2_2024_04_11-14_17_10/: metadata.yaml  rosbag2_2024_04_11-14_17_10_0.db3
rosbag2_2024_04_11-14_21_06/: metadata.yaml  rosbag2_2024_04_11-14_21_06_0.db3
rosbags/: data.csv  long_mission2_for_test_set.csv  long_mission2_for_test_set_diff_15.csv  long_mission_diff.csv  long_mission_long_diff.csv  mission_for_test_set.csv  new_split.yaml  offline_baseline.py  reading_gathered_data_bags_to_csv.py  reading_infered_data_bags_to_csv.py  rosbag2_long_infered.csv  uq_model.py  visualize_data_set.py
(+835 files in other folders)
