<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drivers_canbus</name>
  <version>0.0.1</version>
  <description>Driver for CAN bus </description>
  <maintainer email="miguel.bande_firvida@dfki.de">Miguel Bande Firvida</maintainer>
  <license>LGPL v3</license>
  <!-- <license>BSD-3-Clause</license> -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ros2_driver_base</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>