<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>thruster_enitech</name>
  <version>0.0.1</version>
  <description>Driver for enitech thrusters</description>
  <maintainer email="miguel.bande_firvida@dfki.de">Miguel Bande Firvida</maintainer>
  <license>LGPL v3</license>
  <!-- <license>BSD-3-Clause</license> -->

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>drivers_canbus</depend>
  <depend>auv_control_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>std_msgs</depend>
  <depend>ros2_canbus</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
